# cspace

./: .gitmodules  CMakeLists.txt  README.md  archive.sh  build.sh  file_list.cmake  templating.txt
cmake/: build.sh  file_list.cmake  targets.cmake  test.cmake  utils.cmake
include/: CMakeLists.txt  color.hpp  colorspace.hpp  common.h  conversion.hpp  error.hpp  format.hpp  gradient.hpp  interface.hpp  log.hpp  option.hpp.in  parse.hpp  processor.hpp  setting.hpp  token_iterator.hpp  tstring.hpp
private-headers/: CMakeLists.txt  common.hpp.in  logger.hpp  parse.hpp  setting.hpp  token_iterator.hpp  tstring.hpp
src/: CMakeLists.txt  all_settings.cpp  colorspace.cpp  conversion.cpp  conversion_general.cpp  gradient.cpp  interface.cpp  log.cpp  logger.cpp  main.cpp  parse.cpp  processor.cpp  setting.cpp  token_iterator.cpp  tstring.cpp
src/conversion/: cielab.cpp  cmyk.cpp  conversion_cielab.cpp  conversion_general.cpp  conversion_hsl_hsv.cpp  conversion_xyz.cpp  cylindrical.cpp  general.cpp  hsl_hsv.cpp  jzazbz.cpp  xyz.cpp
src/interface/: add_term.cpp  app_term.cpp  general.cpp  pop_data.cpp  switches.cpp
test/: CMakeLists.txt  conversion.cpp  example.cpp  example_processor.cpp  gradient.cpp  interface.cpp  interface.cxx  parse.cpp  parse.cxx  processor.cpp  processor.cxx
